--- a/scss/components/_containers.scss
+++ b/scss/components/_containers.scss
@@ -1,94 +1,94 @@
-@use '../utilities/variables'as varco;
-@use '../utilities/mixins'as mixco;
+
+@use "../utilities/variables" as *;
+@use "../utilities/mixins" as mix;
 
 // CONTAINERS
 .containerContent {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
-    grid-auto-rows: 26rem;
-    grid-template-rows: repeat(2, auto);
-    gap: 4rem;
-    padding: 2rem;
-    place-items: center;
-    place-content: center space-around;
-    justify-items: center;
-    color: varco.$color-font-primary;
-    font-family: varco.$font-secondary;
-    font-size: 1.2rem;
-    border-radius: 0.5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(18.75rem, 1fr));
+  grid-auto-rows: 26rem;
+  grid-template-rows: repeat(2, auto);
+  gap: 4rem;
+  padding: 2rem;
+  place-items: center;
+  place-content: center space-around;
+  justify-items: center;
+  color: $color-font-primary;
+  font-family: $font-secondary;
+  font-size: 1.2rem;
+  border-radius: 0.5rem;
 
-    .filters {
-        grid-column: 1/-1;
+  .filters {
+    grid-column: 1/-1;
 
-        select {
-            width: 18rem;
-            height: 2rem;
-            font-size: 0.95rem;
-            font-family: varco.$font-tertiary;
-            color: varco.$color-font-primary;
-            background-color: varco.$color-bg-primary;
-            border: none;
-            border-radius: 0.5rem;
-            margin: 1rem;
-            box-shadow: 0.3125rem 0.3125rem 1.25rem varco.$color-shadow;
-        }
-
-        h4 {
-            color: varco.$color-font-secondary;
-            padding: 0.5rem;
-            border-radius: 0.5rem;
-            background-color: varco.$color-green;
-            box-shadow: 0.3125rem 0.3125rem 1.25rem varco.$color-shadow;
-        }
+    select {
+      width: 18rem;
+      height: 2rem;
+      font-size: 0.95rem;
+      font-family: $font-tertiary;
+      color: $color-font-primary;
+      background-color: $color-bg-primary;
+      border: none;
+      border-radius: 0.5rem;
+      margin: 1rem;
+      box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
     }
 
-    @include mixco.subtitle();
+    h4 {
+      color: $color-font-secondary;
+      padding: 0.5rem;
+      border-radius: 0.5rem;
+      background-color: $color-green;
+      box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+    }
+  }
+
+  @include mix.subtitle();
 }
 
 .containerContentHome {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(2, auto);
-    padding: 2rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, auto);
+  padding: 2rem;
 
-    .productsHome {
-        display: flex;
-        flex-wrap: nowrap;
-        overflow: auto;
-        gap: 1.25rem;
-        padding: 1.25rem;
+  .productsHome {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow: auto;
+    gap: 1.25rem;
+    padding: 1.25rem;
 
-        .productCardHome {
-            flex: 0 0 auto;
+    .productCardHome {
+      flex: 0 0 auto;
 
-            .badgeOff {
-                background-color: varco.$color-green;
-                color: varco.$color-font-secondary;
-                font-family: varco.$font-secondary;
-                left: 80%;
-                top: 11%;
-                border-width: 0.5rem;
-                border-color: varco.$color-font-primary;
-                font-size: 1.9rem;
-                box-shadow: 0.3125rem 0.3125rem 1.25rem varco.$color-shadow;
-            }
-        }
+      .badgeOff {
+        background-color: $color-green;
+        color: $color-font-secondary;
+        font-family: $font-secondary;
+        left: 80%;
+        top: 11%;
+        border-width: 0.5rem;
+        border-color: $color-font-primary;
+        font-size: 1.9rem;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+      }
     }
+  }
 
-    @include mixco.subtitle();
+  @include mix.subtitle();
 }
 
-
 .containerContentForm {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-areas:
-        "subtitleForm"
-        "form";
-    gap: 2rem;
-    padding: 2rem;
-    color: varco.$color-font-primary;
-    font-family: varco.$font-secondary;
-    font-size: 1.2rem;
-    border-radius: 0.5rem;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-areas:
+    "subtitleForm"
+    "form";
+  gap: 2rem;
+  padding: 2rem;
+  color: $color-font-primary;
+  font-family: $font-secondary;
+  font-size: 1.2rem;
+  border-radius: 0.5rem;
 }
