--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -1,21 +1,22 @@
-@use '../utilities/variables'as clrc;
+
+@use "../utilities/variables" as *;
 
 // CAROUSEL
 .carousel-caption {
-    background-color: clrc.$color-shadow;
-    padding: 1rem;
-    text-align: center;
-    border-radius: 0.5rem;
+  background-color: $color-shadow;
+  padding: 1rem;
+  text-align: center;
+  border-radius: 0.5rem;
 
-    h5 {
-        font-family: clrc.$font-primary;
-        font-size: 3rem;
-        color: clrc.$color-green;
-    }
+  h5 {
+    font-family: $font-primary;
+    font-size: 3rem;
+    color: $color-green;
+  }
 
-    p {
-        font-family: clrc.$font-secondary;
-        font-weight: 400;
-        font-size: 1.5rem;
-    }
+  p {
+    font-family: $font-secondary;
+    font-weight: 400;
+    font-size: 1.5rem;
+  }
 }
