--- a/scss/components/_offcanvascart.scss
+++ b/scss/components/_offcanvascart.scss
@@ -1,61 +1,66 @@
-@use '../utilities/variables'as varof;
+
+@use "../utilities/variables" as *;
 
 // OFFCANVAS CARRITO
 .offcanvas-header {
-    display: grid;
-    grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: 1fr;
-    grid-template-areas: " . title title title title title close";
-    justify-content: center;
-    align-content: center;
-    place-items: center;
-    background-color: varof.$color-pink;
-    font-family: varof.$font-primary;
-    color: varof.$color-font-secondary;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 1fr;
+  grid-template-areas: " . title title title title title close";
+  justify-content: center;
+  align-content: center;
+  place-items: center;
+  background-color: $color-pink;
+  font-family: $font-primary;
+  color: $color-font-secondary;
 
-    h5 {
-        grid-area: title;
-    }
+  h5 {
+    grid-area: title;
+  }
 
-    button {
-        grid-area: close;
-        justify-self: end;
-    }
+  button {
+    grid-area: close;
+    justify-self: end;
+  }
 }
 
 .offcanvas-body {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 2rem);
-    grid-template-areas:
-        "product product price price"
-        "separator separator separator separator"
-        "total total totalPrice totalPrice"
-        "btnBuy btnBuy btnBuy btnBuy";
-    justify-content: center;
-    align-content: flex-start;
-    justify-items: center;
-    align-items: center;
-    gap: 0.5rem;
-    background-image: linear-gradient(to bottom, varof.$color-bg-primary, varof.$color-bg-secondary);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 2rem);
+  grid-template-areas:
+    "product product price price"
+    "separator separator separator separator"
+    "total total totalPrice totalPrice"
+    "btnBuy btnBuy btnBuy btnBuy";
+  justify-content: center;
+  align-content: flex-start;
+  justify-items: center;
+  align-items: center;
+  gap: 0.5rem;
+  background-image: linear-gradient(
+    to bottom,
+    $color-bg-primary,
+    $color-bg-secondary
+  );
 
-    .product {
-        grid-area: product;
-    }
+  .product {
+    grid-area: product;
+  }
 
-    .price {
-        grid-area: price;
-    }
+  .price {
+    grid-area: price;
+  }
 
-    .total {
-        grid-area: total;
-    }
+  .total {
+    grid-area: total;
+  }
 
-    .totalPrice {
-        grid-area: totalPrice;
-    }
+  .totalPrice {
+    grid-area: totalPrice;
+  }
 
-    .btnBuy {
-        grid-area: btnBuy;
-    }
+  .btnBuy {
+    grid-area: btnBuy;
+  }
 }
