--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,160 +1,181 @@
-@use '../utilities/variables'as varfo;
-@use '../utilities/mixins'as mixfo;
-@use '../utilities/breakpoints'as bpfo;
+
+@use "../utilities/variables" as *;
+@use "../utilities/mixins" as mix;
+@use "../utilities/breakpoints" as bp;
 
 // FOOTER
 footer {
+  display: grid;
+  grid-template-columns: 1fr;
+  place-content: center;
+  align-items: center;
+
+  .footerSocials {
     display: grid;
     grid-template-columns: 1fr;
     place-content: center;
-    align-items: center;
+    place-items: center;
+    row-gap: 2rem;
+    text-align: center;
+    background-image: linear-gradient(
+      to top,
+      $color-bg-primary,
+      $color-bg-secondary
+    );
+    padding: 2rem;
+    color: $color-font-primary;
+    font-family: $font-secondary;
 
-    .footerSocials {
+    .sectionAbout {
+      background-image: linear-gradient(
+        to bottom,
+        $color-bg-primary,
+        $color-bg-secondary
+      );
+      padding: 1.5rem;
+      border-radius: 1rem;
+      box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+
+      h3 {
+        color: $color-font-secondary;
+        background-color: $color-pink;
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+      }
+
+      p {
+        font-size: 1.2rem;
+        margin-top: 1rem;
+      }
+    }
+
+    .sectionSocials {
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(3, auto);
+      gap: 1rem;
+      grid-template-areas:
+        "newsletter"
+        "socials"
+        "contact";
+      justify-content: center;
+      align-content: center;
+      justify-items: center;
+      align-items: center;
+
+      div h3 {
+        grid-area: titulo;
+        display: inline-block;
+        padding: 0.5rem;
+      }
+
+      .newsletter {
+        grid-area: newsletter;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-style: solid;
+        padding: 0.8rem;
+        background-image: linear-gradient(
+          to top,
+          $color-bg-primary,
+          $color-bg-secondary
+        );
+        border-radius: 2rem;
+        border-width: 0.1rem;
+        border-color: $color-violet;
+        box-shadow: 0rem 0.0625rem 0.625rem $color-violet;
+
+        form {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+        }
+
+        input {
+          margin: 0.5rem;
+          border-radius: 0.5rem;
+
+          &:focus {
+            @include mix.input-focus;
+          }
+        }
+      }
+
+      .socials {
+        grid-area: socials;
         display: grid;
-        grid-template-columns: 1fr;
-        place-content: center;
-        place-items: center;
-        row-gap: 2rem;
-        text-align: center;
-        background-image: linear-gradient(to top, varfo.$color-bg-primary, varfo.$color-bg-secondary);
-        padding: 2rem;
-        color: varfo.$color-font-primary;
-        font-family: varfo.$font-secondary;
-
-        .sectionAbout {
-            background-image: linear-gradient(to bottom, varfo.$color-bg-primary, varfo.$color-bg-secondary);
-            padding: 1.5rem;
-            border-radius: 1rem;
-            box-shadow: 0.3125rem 0.3125rem 1.25rem varfo.$color-shadow;
-
-            h3 {
-                color: varfo.$color-font-secondary;
-                background-color: varfo.$color-pink;
-                border-radius: 0.5rem;
-                padding: 0.5rem;
-                box-shadow: 0.3125rem 0.3125rem 1.25rem varfo.$color-shadow;
-            }
-
-            p {
-                font-size: 1.2rem;
-                margin-top: 1rem;
-            }
-        }
-
-        .sectionSocials {
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: repeat(3, auto);
-            gap: 1rem;
-            grid-template-areas:
-                "newsletter"
-                "socials"
-                "contact";
-            justify-content: center;
-            align-content: center;
-            justify-items: center;
-            align-items: center;
-
-            div h3 {
-                grid-area: titulo;
-                display: inline-block;
-                padding: 0.5rem;
-            }
-
-            .newsletter {
-                grid-area: newsletter;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
-                border-style: solid;
-                padding: 0.8rem;
-                background-image: linear-gradient(to top, varfo.$color-bg-primary, varfo.$color-bg-secondary);
-                border-radius: 2rem;
-                border-width: 0.1rem;
-                border-color: varfo.$color-violet;
-                box-shadow: 0rem 0.0625rem 0.625rem varfo.$color-violet;
-
-                form {
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
-
-                input {
-                    margin: 0.5rem;
-                    border-radius: 0.5rem;
-
-                    &:focus {
-                        @include mixfo.input-focus;
-                    }
-                }
-            }
-
-            .socials {
-                grid-area: socials;
-                display: grid;
-                grid-template-columns: repeat(3, auto);
-                grid-template-rows: repeat(2, 2rem);
-                grid-template-areas:
-                    "titulo titulo titulo";
-                justify-content: center;
-                align-items: center;
-                gap: 1rem;
-                border-style: solid;
-                padding: 1.5rem;
-                background-image: linear-gradient(to top, varfo.$color-bg-primary, varfo.$color-bg-secondary);
-                border-radius: 2rem;
-                border-width: 0.1rem;
-                border-color: varfo.$color-blue;
-                box-shadow: 0rem 0.0625rem 0.625rem varfo.$color-blue;
-
-                #instagram {
-                    @include mixfo.social-icon($hv-color: varfo.$color-instagram)
-                }
-
-                #youtube {
-                    @include mixfo.social-icon($hv-color: varfo.$color-youtube)
-                }
-
-                #facebook {
-                    @include mixfo.social-icon($hv-color: varfo.$color-facebook)
-                }
-
-            }
-
-            .contact {
-                grid-area: contact;
-                border-style: solid;
-                padding: 1rem;
-                background-image: linear-gradient(to top, varfo.$color-bg-primary, varfo.$color-bg-secondary);
-                border-radius: 2rem;
-                border-width: 0.1rem;
-                border-color: varfo.$color-green;
-                box-shadow: 0rem 0.0625rem 0.625rem varfo.$color-green;
-
-                .telephone {
-                    font-size: 1rem;
-                }
-            }
-
-            @include bpfo.md {
-                grid-template-columns: repeat(3, 1fr);
-                grid-template-rows: auto;
-                grid-template-areas:
-                    "newsletter contact socials";
-            }
-        }
-    }
-
-    .footerCopyright {
-        background-image: linear-gradient(to bottom, varfo.$color-bg-primary, varfo.$color-bg-secondary);
+        grid-template-columns: repeat(3, auto);
+        grid-template-rows: repeat(2, 2rem);
+        grid-template-areas: "titulo titulo titulo";
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+        border-style: solid;
         padding: 1.5rem;
-        text-align: center;
-        color: varfo.$color-font-primary;
-        font-family: varfo.$font-secondary;
-        font-size: 1rem;
-    }
+        background-image: linear-gradient(
+          to top,
+          $color-bg-primary,
+          $color-bg-secondary
+        );
+        border-radius: 2rem;
+        border-width: 0.1rem;
+        border-color: $color-blue;
+        box-shadow: 0rem 0.0625rem 0.625rem $color-blue;
 
+        #instagram {
+          @include mix.social-icon($hv-color: $color-instagram);
+        }
+
+        #youtube {
+          @include mix.social-icon($hv-color: $color-youtube);
+        }
+
+        #facebook {
+          @include mix.social-icon($hv-color: $color-facebook);
+        }
+      }
+
+      .contact {
+        grid-area: contact;
+        border-style: solid;
+        padding: 1rem;
+        background-image: linear-gradient(
+          to top,
+          $color-bg-primary,
+          $color-bg-secondary
+        );
+        border-radius: 2rem;
+        border-width: 0.1rem;
+        border-color: $color-green;
+        box-shadow: 0rem 0.0625rem 0.625rem $color-green;
+
+        .telephone {
+          font-size: 1rem;
+        }
+      }
+
+      @include bp.md {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto;
+        grid-template-areas: "newsletter contact socials";
+      }
+    }
+  }
+
+  .footerCopyright {
+    background-image: linear-gradient(
+      to bottom,
+      $color-bg-primary,
+      $color-bg-secondary
+    );
+    padding: 1.5rem;
+    text-align: center;
+    color: $color-font-primary;
+    font-family: $font-secondary;
+    font-size: 1rem;
+  }
 }
