--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -1,91 +1,96 @@
-@use '../utilities/variables'as varfor;
-@use '../utilities/mixins'as mixf;
-@use '../utilities/breakpoints'as bpfor;
+
+@use "../utilities/variables" as *;
+@use "../utilities/mixins" as mix;
+@use "../utilities/breakpoints" as bp;
 
 // FORMS
 .centerItemsGrid {
-    justify-self: center;
-    align-self: center;
+  justify-self: center;
+  align-self: center;
 }
 
 .subtitleForm {
-    grid-area: subtitleForm;
-    color: varfor.$color-font-secondary;
-    padding: 1rem;
-    box-shadow: 0.3125rem 0.3125rem 1.25rem varfor.$color-shadow;
-    background-color: varfor.$color-violet;
-    border-radius: 0.5rem;
-    .contentSubtitle {
-        display: block;
-        text-align: center;
-        margin-bottom: 0;
-        font-family: varfor.$font-primary;
+  grid-area: subtitleForm;
+  color: $color-font-secondary;
+  padding: 1rem;
+  box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+  background-color: $color-violet;
+  border-radius: 0.5rem;
+  .contentSubtitle {
+    display: block;
+    text-align: center;
+    margin-bottom: 0;
+    font-family: $font-primary;
 
-    @include bpfor.md {
-        text-align: start;
-        margin-left: 2rem;
+    @include bp.md {
+      text-align: start;
+      margin-left: 2rem;
     }
-}
+  }
 }
 
 .formGroup {
-    grid-area: form;
-    display: flex;
-    flex-direction: column;
-    background-image: linear-gradient(to bottom, varfor.$color-bg-primary, varfor.$color-bg-secondary);
-    box-shadow: 0.3125rem 0.3125rem 1.25rem varfor.$color-shadow;
-    border-radius: 1rem;
-    width: MIN(40rem, 100%);
-    height: 100%;
-    padding: 1rem;
+  grid-area: form;
+  display: flex;
+  flex-direction: column;
+  background-image: linear-gradient(
+    to bottom,
+    $color-bg-primary,
+    $color-bg-secondary
+  );
+  box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+  border-radius: 1rem;
+  width: MIN(40rem, 100%);
+  height: 100%;
+  padding: 1rem;
 
-    h3 {
-        font-size: 1.5rem;
-        border-radius: 0.5rem;
-        padding: 0.5rem;
-        color: varfor.$color-font-secondary;
-        background-color: varfor.$color-green;
-        box-shadow: 0.3125rem 0.3125rem 1.25rem varfor.$color-shadow;
+  h3 {
+    font-size: 1.5rem;
+    border-radius: 0.5rem;
+    padding: 0.5rem;
+    color: $color-font-secondary;
+    background-color: $color-green;
+    box-shadow: 0.3125rem 0.3125rem 1.25rem $color-shadow;
+  }
+
+  .form {
+    margin-top: 1rem;
+
+    button {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
     }
 
-    .form {
-        margin-top: 1rem;
+    p {
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
 
-        button {
-            margin-top: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        p {
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
-
-            a {
-                color: varfor.$color-green;
-                text-decoration: none;
-            }
-        }
-
-        input:focus {
-            @include mixf.input-focus;
-        }
-
-        .camp label {
-            display: block;
-            font-size: 1.2rem;
-        }
-
-        textarea {
-            width: 100%;
-            padding: 0.4rem;
-            border-radius: 0.5rem;
-            font-family: varfor.$font-secondary;
-            font-size: 1rem;
-            font-weight: bold;
-
-            &:focus {
-                @include mixf.input-focus;
-            }
-        }
+      a {
+        color: $color-green;
+        text-decoration: none;
+      }
     }
+
+    input:focus {
+      @include mix.input-focus;
+    }
+
+    .camp label {
+      display: block;
+      font-size: 1.2rem;
+    }
+
+    textarea {
+      width: 100%;
+      padding: 0.4rem;
+      border-radius: 0.5rem;
+      font-family: $font-secondary;
+      font-size: 1rem;
+      font-weight: bold;
+
+      &:focus {
+        @include mix.input-focus;
+      }
+    }
+  }
 }
