--- a/css/stylescss.css
+++ b/css/stylescss.css
@@ -1,5 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css");
+/* @import url("http://fonts.cdnfonts.com/css/cubano"); */
+/* @import url("http://fonts.cdnfonts.com/css/sofia-pro"); */
+/* @import url("http://fonts.cdnfonts.com/css/roboto-mono"); */
 @font-face {
   font-family: "Cubano";
   src: url("../fonts/Cubano.ttf");
@@ -302,7 +305,7 @@
 .containerContentForm {
   display: grid;
   grid-template-columns: auto;
-  grid-template-areas: "subtitleForm" "form";
+  grid-template-areas: "subtitleForm" "form";
   gap: 2rem;
   padding: 2rem;
   color: #F5F5F5;
@@ -357,7 +360,7 @@
 .multimedia {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-areas: "subtitleVideo" "videoContainer" "subtitleMap" "mapContainer";
+  grid-template-areas: "subtitleVideo" "videoContainer" "subtitleMap" "mapContainer";
   place-content: center; }
   .multimedia .subtitleVideo, .multimedia .subtitleMap {
     grid-area: subtitleVideo;
@@ -416,7 +419,7 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 2rem);
-  grid-template-areas: "product product price price" "separator separator separator separator" "total total totalPrice totalPrice" "btnBuy btnBuy btnBuy btnBuy";
+  grid-template-areas: "product product price price" "separator separator separator separator" "total total totalPrice totalPrice" "btnBuy btnBuy btnBuy btnBuy";
   justify-content: center;
   align-content: flex-start;
   justify-items: center;
@@ -487,7 +490,7 @@ footer {
       grid-template-columns: 1fr;
       grid-template-rows: repeat(3, auto);
       gap: 1rem;
-      grid-template-areas: "newsletter" "socials" "contact";
+      grid-template-areas: "newsletter" "socials" "contact";
       justify-content: center;
       align-content: center;
       justify-items: center;
@@ -637,59 +640,56 @@ footer {
         color: #F5F5F5; }
 
 @media (min-width: 0) {
-  header {
+  .header {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-image: linear-gradient(to left, #12181B, #2A2E35);
     padding: 0.625rem; }
-    header .logoSite {
+    .header__logo-site {
       width: 15rem;
       height: 15rem; }
-    header .logoSiteNav {
+    .header__logo-site-nav {
       display: none; }
-    header .titleSite {
+    .header__title-site {
       display: none; } }
 
 @media (min-width: 576px) {
-  header {
+  .header {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-areas: "logo title title .";
     justify-content: center;
     align-content: center; }
-    header .logo {
+    .header__logo {
       grid-area: logo;
       display: flex;
       justify-content: start;
       align-items: center; }
-    header .title {
+    .header__title {
       grid-area: title;
       text-align: center; }
-    header .title span {
+    .header__subtitle-site {
       display: block; }
-    header .logoSite {
+    .header__logo-site {
       width: 10rem;
       height: 10rem; }
-    header .logoSiteNav {
-      width: 5rem;
-      height: 5rem; }
-    header .titleSite {
+    .header__title-site {
       display: inline;
       font-size: 2.5rem; } }
 
 @media (min-width: 768px) {
-  header .titleSite {
+  .header__title-site {
     font-size: 3.5rem; } }
 
-header a {
+.header a {
   color: #F5F5F5;
   text-decoration: none; }
-  header a:hover {
+  .header a:hover {
     color: #F5F5F5; }
 
-header .titleSite {
+.header__title-site {
   font-family: "Cubano", sans-serif; }
 
 main {
@@ -697,7 +697,3 @@ main {
   font-family: "Sofia Pro", sans-serif;
   color: #F5F5F5;
   background-image: linear-gradient(to top, #12181B, #2A2E35); }
-
-/* @import url("http://fonts.cdnfonts.com/css/cubano"); */
-/* @import url("http://fonts.cdnfonts.com/css/sofia-pro"); */
-/* @import url("http://fonts.cdnfonts.com/css/roboto-mono"); */
