--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 // HEADER
-header {
+.header {
     @include xs {
         display: flex;
         flex-direction: column;
@@ -8,16 +8,16 @@ header {
         background-image: linear-gradient(to left, $color-bg-primary, $color-bg-secondary);
         padding: 0.625rem;
 
-        .logoSite {
+        &__logo-site {
             width: 15rem;
             height: 15rem;
         }
 
-        .logoSiteNav {
+        &__logo-site-nav {
             display: none;
         }
 
-        .titleSite {
+        &__title-site {
             display: none;
         }
     }
@@ -29,7 +29,7 @@ header {
         justify-content: center;
         align-content: center;
 
-        .logo {
+        &__logo {
             grid-area: logo;
             display: flex;
             justify-content: start;
@@ -37,33 +37,28 @@ header {
 
         }
 
-        .title {
+        &__title {
             grid-area: title;
             text-align: center;
         }
 
-        .title span {
+        &__subtitle-site {
             display: block;
         }
 
-        .logoSite {
+        &__logo-site {
             width: 10rem;
             height: 10rem;
         }
 
-        .logoSiteNav {
-            width: 5rem;
-            height: 5rem;
-        }
-
-        .titleSite {
+        &__title-site {
             display: inline;
             font-size: 2.5rem;
         }
     }
 
     @include md {
-        .titleSite {
+        &__title-site {
             font-size: 3.5rem;
         }
     }
@@ -77,7 +72,7 @@ header {
         }
     }
 
-    .titleSite {
+    &__title-site {
         font-family: $font-primary;
     }
 
